Setting up styles

--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
 		<title>Introduction to Web Accessibility</title>
 
 		<link rel="stylesheet" href="reveal.js/css/reveal.css">
-		<!-- <link rel="stylesheet" href="styles/arcgisonline.css"> -->
+		<link rel="stylesheet" href="styles/main.css">
 		
 		<!-- Custom style for this presentation -->
 		<style>
